--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,10 @@
-<h1>香典集計</h1>
-
+<!DOCKTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>kouden_shukei</title>
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  <body>
+    <h1>香典集計</h1>
+  </body>
