--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,7 @@
-<h1>みんなで</h1>
-<h2>香典集計</h2>
-<h3>ゲスト１を招待</h3>
-
+<h2>みんなで香典集計</h2>
+<input type="submit" value="ゲスト１さんを招待する">
+<input type="submit" value="ゲスト２さんを招待する">
+<input type="submit" value="ゲスト３さんを招待する">
+<input type="submit" value="ゲスト４さんを招待する">
+<input type="submit" value="ゲスト５さんを招待する">
+<input type="submit" value="ホストの集計管理">
