--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,7 @@
 <h2>みんなで香典集計</h2>
-<input type="submit" value="ゲスト１さんを招待する">
-<input type="submit" value="ゲスト２さんを招待する">
-<input type="submit" value="ゲスト３さんを招待する">
-<input type="submit" value="ゲスト４さんを招待する">
-<input type="submit" value="ゲスト５さんを招待する">
-<input type="submit" value="ホストの集計管理">
+<button type="button" onclick="location.href='https://">ゲスト１さんを招待する</button><br>
+<button type="button" onclick="location.href='https://">ゲスト２さんを招待する</button><br>
+<button type="button" onclick="location.href='https://">ゲスト３さんを招待する</button><br>
+<button type="button" onclick="location.href='https://">ゲスト４さんを招待する</button><br>
+<button type="button" onclick="location.href='https://">ゲスト５さんを招待する</button><br>
+<button type="button" onclick="location.href='https://">ホストの集計管理ページ</button><br>
