--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,33 +1,21 @@
-<%= form_with model: @posts do |form| %>
-  <div>
-    <%= form.label :ご芳名 %>
-    <%= form.text_field :name %>
-  </div>
-  <div>
-    <%= form.label :※連名 %><br>
-    <%= form.text_field :joint_name %>
-  </div>
-  <div>
-    <%= form.label :香典金額 %><br>
-    <%= form.text_field :amount %>
-  </div>
-  <div>
-    <%= form.label :ご住所 %><br>
-    <%= form.text_area :address %>
-  </div>
-  <div>
-    <%= form.label :電話番号 %><br>
-    <%= form.text_field :tel %>
-  </div>
-  <div>
-    <%= form.label :携帯番号 %><br>
-    <%= form.text_field :mobile %>
-  </div>
-  <div>
-    <%= form.label :供花・供物・その他 %><br>
-    <%= form.text_area :others %>
-  </div>
-  <div>
-    <%= form.submit "登録する" %>
-  </div>
-<% end %>
+<form>
+
+  <p>登録番号</p>
+  <input>
+
+  <p>ご芳名</p>
+  <input>
+
+  <p>香典金額</p>
+  <input>
+
+  <p>ご住所</p>
+  <textarea></textarea>
+
+  <p>電話番号</p>
+  <input>
+
+  <p>供花・供物・その他</p>
+  <textarea></textarea>
+
+</form>
